--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@material-tailwind/react": "^2.1.9",
     "primeicons": "^6.0.1",
     "primereact": "^10.5.3",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-hook-form": "^7.51.2",
+    "react-icons": "^5.0.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
