--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@material-tailwind/react": "^2.1.9",
     "axios": "^1.6.8",
+    "ldrs": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
